--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -54,9 +54,9 @@
 \subsection{Scope}
 \label{sub:scope}
 % Begin SubSection
-	“Climatar” is a UI based mobile game, designed for Android OS, that simulates climate change as experienced by the world made popular by animated TV series, Avatar: The Last Airbender. The game generates news events, which describe real world actions, policies and decisions, which either contribute to or deter climate change, influencing variables that monitor the environmental sphere of the applications model world.
+	“Climatar” is a UI based mobile game, designed for Android OS, that simulates climate change as experienced by the world made popular by animated TV series, Avatar: The Last Airbender. The game generates news events, which describe real world actions, policies and decisions, which either contribute to or deter climate change, influencing variables that monitor the environmental sphere of the applications model world. The objective of the game is to regulate news events, in order to minimize the effects of greenhouse gasses and because of gloabal warming.
 
-The world of Avatar has been intentionally selected for this simulation, as it's political, social and economic environment describes a simpler model of the contemporary world and allows for the independent analysis of consequences of different motivations . In addition, the world provides a fictional backdrop for the gaming application.\cite{WoA}The geography of the model world is divided into four independent nations: Air Nomads, Water Tribe, Fire Nation and Earth Kingdom. The user will have the option to choose one of these nations, enacting the news events pertaining to the chosen nation or to play god, enacting the news events pertaining to all four nations. Each nation follows a unique political system, culture and lifestyle, and uses the element specified in its name as its primary source of energy. These elements are utilized by special portion of the population known as benders, who have the ability to naturally manipulate a specific element. 
+The world of Avatar has been selected as the application's model world as it provides a fictional backdrop for the game and the world's political, social and economic environment describes a simpler model of the contemporary world. This ensures that the consequences of the news events are enforced on the world independent of each other .\cite{WoA}The geography of the model world is divided into four independent nations: Air Nomads, Water Tribe, Fire Nation and Earth Kingdom. The user will have the option to choose one of these nations, enacting the news events pertaining to the chosen nation or to play god, enacting the news events pertaining to all four nations. Each nation follows a unique political system, culture and lifestyle, and uses the element specified in its name as its primary source of energy. 
 
 The objective of the game is to regulate news events, in order to minimize the effects of greenhouse gasses and because of gloabal warming. The game ends once the model world has experienced sufficient damage due to climate change, severly changing the world's eco-system, and resulting the user with a loss. The application shall provide users with a save and load game option, allowing the user to play the game, as when they please. The game should be available for download through an application store or public repository.	
 % End SubSection
@@ -107,7 +107,7 @@ Existing products related to Climatar include:
 \begin{itemize}
 	\item \textbf{BBC - Climate Challenge} 
 		
-		\cite{BBC}Is a web application for simulating the effects on controlling Great Britain. The application advances with 10 year turns, each turn allows a specific set of decisions to be made. Each decision effects just Great Britain. The overall goal is to become a no-emissions country within 200 years. \\
+		Is a web application for simulating the effects on controlling Great Britain\cite{BBC}. The application advances with 10 year turns, each turn allows a specific set of decisions to be made. Each decision effects just Great Britain. The overall goal is to become a no-emissions country within 200 years. \\
 		Climatar contrasts this application through the following points:
 		\begin{itemize}
 			\item Climatar is for use on android devices. Android web players do not support the application BBC - Climate Challenge.
