Product Functions Revised Sec 2.2

--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -143,16 +143,7 @@ Climatar is a self-contained software solution with respect to the Android syste
 \subsection{Product Functions}
 \label{sub:product_functions}
 % Begin SubSection
-The functionality Climatar is to present as a product is:
-%List of Product functions for Climatar
-\begin{enumerate}
-	\item Climatar is to present the ability to simulate regions of a world based on regional, political, general climate, and pollution levels of the world under simulation.
-	\item As a part of simulating the world, news items are presented as attributes of the world, it is up to the user to react to news.
-	\item User interactions occur with an emphasis on not being omnipotent in how the world works, only in reactions to events within the world itself. In short users are given the ability to react to the changing world, propagating further changes, however they are not given the ability to command all aspects of the world.
-	\item The application presents the user information allowing them to make needed decisions.
-	\item Climatar allows for regional analysis, showing specific attributes of regions allowing for contrast in benefits versus disadvantages of regional reactions to changes made.
-	\item Climatar is a tool to have users think about reactions to events on a global scale in a non real-time scale to show long term effects to event reactions unfold quickly.
-\end{enumerate}
+As an End User, Climatar is to present the ability to simulate regions of a world based on regional, political, general climate, and pollution levels of the world under simulation.  Users are granted the ability to make the decisions a country may be faced with based on the state of the world, and relations with other countries. However, the User is not granted a role of omnipotence, they cannot control all aspects of how the world or their region behaves. Instead, based on previous actions and the state of the country under governance, the User is presented with events, in the form of news items, which they can react to. Each event has some factor of consequence associated with it (such as: additional pollution, cost, loss of relation...), providing Climatar Users the ability to analyse the long term effects of decisions on a global and regional level. Lastly, information is presented to the user on a per region and international scale, allowing for decisions to be made with a maximized set of information to contrast.
 % End SubSection
 
 \subsection{User Characteristics}
